replace gc log